# forc.pub

./: .env  .env.example  .gitignore  CNAME  Cargo.toml  README.md  Rocket.toml  config.toml  docker-compose.yml  rust-toolchain.toml
.github/workflows/: backend-ci.yml  frontend-build-and-test.yml  frontend-bundle-size-check.yml  helm-publish.yaml
app/: .env.example  .eslintrc  .gitignore  debug-actual.js  debug-search-quick.js  debug-search.html  direct-search-test.html  final-search-test.js  middleware.ts  minimal-search-test.html  next.config.js  next.config.mjs  package-lock.json  package.json  search-test-isolated.html  test-css-styling.html  test-manual-css.html  test-navigation.html  test-search-interactive.html  test-search-simple.js  test-search-working.html  test-search.js  tsconfig.json  validate-search.js
app/public/: index.html  manifest.json
app/scripts/: check-bundle-size.js
app/src/: App.css  App.tsx  constants.ts  index.css  index.tsx  middleware.ts  reportWebVitals.ts
deployment/: Dockerfile
deployment/charts/: Chart.yaml  values.yaml
deployment/scripts/: .env  forc-pub-delete.sh  forc-pub-deploy.sh  forc-pub-ingress-deploy.sh
docs/: database.md
helm/forc.pub/: Chart.yaml  values.yaml
migrations/2024-04-19-174554_create_users/: up.sql
migrations/2024-04-19-174903_create_sessions/: up.sql
migrations/2024-04-29-210717_create_api_tokens/: up.sql
migrations/2024-09-24-205353_uploads/: down.sql  up.sql
migrations/2025-01-10-191952_create_packages/: up.sql
migrations/2025-01-10-194911_create_package_versions/: down.sql  up.sql
migrations/2025-01-10-203250_update_packages_default_version_fk/: down.sql  up.sql
migrations/2025-01-11-051241_alter_timestamp_to_tstz/: down.sql  up.sql
migrations/2025-01-28-173445_move_readme_license_cols/: down.sql  up.sql
migrations/2025-01-28-173831_create_package_dependencies/: down.sql  up.sql
migrations/2025-03-21-204522_create_categories_keywords/: down.sql  up.sql
migrations/2025-04-01-000202_alter_users_add_github_id/: down.sql  up.sql
migrations/2025-04-02-120000_add_search_indexes/: down.sql  up.sql
scripts/: pgadmin-servers.json  start-local-server.sh  start_local_db.sh  start_local_server.sh
src/: api.rs  cors.rs  github.rs  index.rs  lib.rs  main.rs  models.rs  schema.rs  types.rs  upload.rs  util.rs
src/api/: api_token.rs  auth.rs  (+4 more)
tests/: db_integration.rs
(+122 files in other folders)
