[package]
name = "forc_pub"
version = "0.1.0"
edition = "2021"

[lib]
name = "forc_pub"
path = "src/lib.rs"

[dependencies]
nanoid = "0.4.0"
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
regex = "1.7.0"
rocket = { version = "0.5.0-rc.2", features = ["tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
diesel = { version = "2.2", features = ["postgres", "uuid", "r2d2", "chrono"] }
dotenvy = "0.15"
uuid = { version = "1.13", features = ["v4", "serde"] }
diesel_migrations = "2.1.0"
rand = "0.8"
sha2 = "0.10.8"
serial_test = "3.1.1"
pinata-sdk = "1.1.0"
tar = "0.4.41"
flate2 = "1.0.33"
semver = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tempfile = "3.17"
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
forc-util = "0.66.7"
forc-pkg = "0.66.7"
